retorte laboratories (retorte.ch) IntervalMusicCompositor change log
--------------------------------------------------------------------------------

2021-10-31  2.11.0
--------------------------------------------------------------------------------
ADD  #28    Streamlines upgrade process by adding one-click-updater.
ADD  #49    Adds mailto button to error dialog.
IMP         Upgrades the bundled runtime to Java 17.
IMP  #55    Increases sound effect fade in duration to .4 seconds (from .2 s).
FIX         'Too long' indicator in list overrides all other states, even errors.
FIX  #62    Tracks in the current directory are not anymore added automatically.


2021-07-11  2.10.0
--------------------------------------------------------------------------------
IMP  #59    Inactivates process button if no compilation is possible.
FIX  #61    Failing encoding tests in some environment by explicitly states encoding.
FIX  #58    Crash with wrong Java version by bundling Java with the application.
FIX  #60    In advanced pattern too long breaks with break track were swallowed.
FIX         Settings in the starting window were not reflected in preferences dialog.
FIX         Error when non-integer numbers were entered into duration fields.


2019-03-05  2.9.2
--------------------------------------------------------------------------------
FIX  #56    Continuous enumeration crashes on playlist repeating.


2018-11-15  2.9.1
--------------------------------------------------------------------------------
FIX  #50    Stale output directory yields error.
FIX  #51    OutOfMemoryError when adding long mp3 music file.
FIX  #53    NPE when playing extract (BPM dialog) while file is still importing.


2018-07-19  2.9.0
--------------------------------------------------------------------------------
ADD  #47    Reduce / adapt volume of break track.
FIX  #46    BPM dialog: Music should stop when dialog is closed.
FIX  #48    'Double whistle' special effect can be placed out of range.

